--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,18 @@
+# PHL 201 Philosophy Course - Streamlit Lessons
+# Universal requirements.txt for all weekly lessons  
+# Xavier Honablue, M.Ed. - Wayne County Community College District
 
+# Core Streamlit framework
+streamlit>=1.28.0
+
+# Optional AI integration for philosopher conversations
+# (Used in lessons with interactive philosopher dialogs)
+openai>=1.3.0
+
+# Data handling for student progress tracking and exports
+pandas>=2.0.0
+numpy>=1.24.0
+
+# Note: All lessons are Streamlit applications
+# Core functionality works with just streamlit
+# Additional packages enhance features but are not required
